# rag-llama.cpp-project

./: .gitignore  COLAB_T4_GPU_SETUP.md  README.md  evaluation.py  main.py  pyproject.toml  test_generation.py  test_retrieval.py  vram_samples.csv  vram_test.py
.github/workflows/: uv-smoke-test.yml
configs/: colab_t4.env
data/: product_info.json  test_data.json
rag/: build_index.py  chunking.py  embedding.py  generation.py  retrieval.py
storage/: chunks.json  embeddings.npy  evaluation_records.jsonl
