[project]
name = "rag-llama-cpp-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "llama-cpp-python>=0.3.21",
    "numpy>=2.4.4",
    "sentence-transformers>=5.4.1",
    "sentencepiece>=0.2.1",
    "transformers>=5.6.2",
]
